Fix stikker overflow

--- a/src/style.css
+++ b/src/style.css
@@ -89,8 +89,6 @@ img {
   position: relative;
   max-width: 160px;
   margin: 0 auto;
-  border-radius: 50%;
-  overflow: hidden;
   margin-bottom: 1rem;
 }
 
@@ -100,6 +98,8 @@ img {
   height: 0;
   padding-bottom: 100%;
   width: 100%;
+  background-color: #e6e6e6;
+  border-radius: 50%;
 }
 
 .stikker__image {
@@ -113,7 +113,8 @@ img {
   max-width: 100%;
   height: 100%;
   transform: translate(-50%, -50%);
-  background-color: #e6e6e6;
+  border-radius: 50%;
+  overflow: hidden;
 }
 
 @keyframes pulse {
